--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Portfolio - About</title>
+  <title>Portfolio - Contact</title>
   <link rel="stylesheet" href="styles/main.css">
 </head>
 <body>
@@ -11,15 +11,20 @@
     <div class="logo">My Portfolio</div>
     <ul class="nav-links">
       <li><a href="index.html">Home</a></li>
-      <li><a href="about.html" class="active">About</a></li>
-      <li><a href="contact.html">Contact</a></li>
+      <li><a href="about.html">About</a></li>
+      <li><a href="contact.html" class="active">Contact</a></li>
     </ul>
     <div class="hamburger">☰</div>
   </nav>
 
   <section>
-    <h1>About Me</h1>
-    <p>I am a fulalso building l stack web developer passionate about building responsive websites and apps.and also insterest in Artificial intelligence and machine learning  </p>
+    <h1>Contact Me</h1>
+    <form>
+      <input type="text" placeholder="Your Name" required>
+      <input type="email" placeholder="Your Email" required>
+      <textarea placeholder="Message" required></textarea>
+      <button type="submit">Send</button>
+    </form>
   </section>
 
   <script src="scripts.js"></script>
