--- a/about.html
+++ b/about.html
@@ -1,28 +1,112 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Portfolio - About</title>
-  <link rel="stylesheet" href="main.css">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>TaskFlow - About</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    />
+    <link rel="stylesheet" href="styles/main.css" />
 </head>
-<body>
-  <nav>
-    <div class="logo">My Portfolio</div>
-    <ul class="nav-links">
-      <li><a href="index.html">Home</a></li>
-      <li><a href="about.html" class="active">About</a></li>
-      <li><a href="contact.html">Contact</a></li>
-    </ul>
-    <div class="hamburger">☰</div>
-  </nav>
+<body class="bg-gray-50 text-gray-800">
+    <!-- Navigation -->
+    <nav class="bg-white shadow-md fixed w-full z-10">
+        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+            <div class="flex justify-between h-16">
+                <div class="flex items-center">
+                    <a href="index.html" class="text-xl font-bold text-blue-600">TaskFlow</a>
+                </div>
+                <div class="hidden md:flex items-center space-x-8">
+                    <a href="index.html" class="text-gray-900 hover:text-blue-600 px-3 py-2">Home</a>
+                    <a href="about.html" class="text-gray-900 hover:text-blue-600 px-3 py-2">About</a>
+                    <a href="contact.html" class="text-gray-900 hover:text-blue-600 px-3 py-2">Contact</a>
+                </div>
+                <div class="md:hidden flex items-center">
+                    <button id="menu-btn" class="text-gray-900 hover:text-blue-600 focus:outline-none">
+                        <i class="fas fa-bars fa-lg"></i>
+                    </button>
+                </div>
+            </div>
+            <div id="mobile-menu" class="md:hidden hidden space-y-1 py-2">
+                <a href="index.html" class="block px-3 py-2 text-gray-900 hover:bg-gray-100">Home</a>
+                <a href="about.html" class="block px-3 py-2 text-gray-900 hover:bg-gray-100">About</a>
+                <a href="contact.html" class="block px-3 py-2 text-gray-900 hover:bg-gray-100">Contact</a>
+            </div>
+        </div>
+    </nav>
 
-  <section>
-    <h1>About Me</h1>
-    <p>I am a fulalso building l stack web developer passionate about building responsive websites and apps.and also insterest in Artificial intelligence and machine learning  </p>
-  </section>
+    <!-- About Section -->
+    <section class="pt-16 pb-20 px-4">
+        <div class="max-w-7xl mx-auto flex flex-col md:flex-row items-center">
+            <div class="md:w-1/3 mb-8 md:mb-0">
+                <img
+                  src="https://storage.googleapis.com/workspace-0f70711f-8b4e-4d94-86f1-2a93ccde5887/image/8cd4813a-ece9-4613-9930-08b40c4ad0a4.png"
+                  alt="Professional portrait of a software engineer in a modern office setting, wearing glasses and a subtle smile, with code snippets blurred in the background"
+                  class="rounded-full shadow-lg w-full h-auto"
+                />
+            </div>
+            <div class="md:w-2/3 md:pl-12">
+                <h1 class="text-4xl md:text-5xl font-bold text-blue-600 mb-6">About TaskFlow</h1>
+                <p class="text-lg md:text-xl text-gray-600 mb-6">
+                    TaskFlow is a cutting-edge task management platform designed to revolutionize how individuals and teams handle their workflows. Born from a passion for efficient productivity tools, this project showcases modern web development techniques, from responsive design to scalable architecture.
+                </p>
+                <p class="text-lg md:text-xl text-gray-600 mb-6">
+                    As a full-stack development initiative, TaskFlow integrates the latest technologies to provide an intuitive user experience. The application emphasizes clean UI/UX, real-time collaboration features, and robust backend support to ensure seamless task tracking and team productivity.
+                </p>
+                <h3 class="text-2xl font-semibold text-gray-800 mb-4">Technologies Used:</h3>
+                <ul class="list-disc list-inside text-lg text-gray-600 mb-6 space-y-2">
+                    <li>Frontend: HTML5, CSS3, JavaScript, React (planned)</li>
+                    <li>Backend: Node.js, Express (planned)</li>
+                    <li>Database: MongoDB (planned)</li>
+                    <li>Deployment: GitHub Pages, Netlify</li>
+                    <li>Tools: Git, VS Code, Chrome DevTools</li>
+                </ul>
+                <a href="index.html" class="bg-blue-600 text-white px-6 py-3 rounded-lg hover:bg-blue-700 transition duration-300">Back to Home</a>
+            </div>
+        </div>
+    </section>
 
-  <script src="scripts.js"></script>
+    <!-- Technology Stack Section -->
+    <section class="py-20 bg-white px-4">
+        <div class="max-w-7xl mx-auto">
+            <h2 class="text-3xl md:text-4xl font-bold text-center mb-12">Technology Stack</h2>
+            <div class="grid grid-cols-2 md:grid-cols-4 gap-8">
+                <div class="text-center p-4 border border-gray-200 rounded-lg hover:shadow-lg transition duration-300">
+                    <i class="fab fa-html5 fa-3x text-orange-600 mb-2"></i>
+                    <p class="text-md font-semibold">HTML5</p>
+                </div>
+                <div class="text-center p-4 border border-gray-200 rounded-lg hover:shadow-lg transition duration-300">
+                    <i class="fab fa-css3-alt fa-3x text-blue-600 mb-2"></i>
+                    <p class="text-md font-semibold">CSS3</p>
+                </div>
+                <div class="text-center p-4 border border-gray-200 rounded-lg hover:shadow-lg transition duration-300">
+                    <i class="fab fa-js-square fa-3x text-yellow-500 mb-2"></i>
+                    <p class="text-md font-semibold">JavaScript</p>
+                </div>
+                <div class="text-center p-4 border border-gray-200 rounded-lg hover:shadow-lg transition duration-300">
+                    <i class="fab fa-node-js fa-3x text-green-600 mb-2"></i>
+                    <p class="text-md font-semibold">Node.js</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Footer -->
+    <footer class="bg-gray-800 text-white py-8 px-4">
+        <div class="max-w-7xl mx-auto text-center">
+            <p>© 2023 TaskFlow. All rights reserved.</p>
+        </div>
+    </footer>
+
+    <script>
+        const menuBtn = document.getElementById('menu-btn');
+        const mobileMenu = document.getElementById('mobile-menu');
+        menuBtn.addEventListener('click', () => {
+            mobileMenu.classList.toggle('hidden');
+        });
+    </script src="scripts.js"></script>
 </body>
 </html>
-
