--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>TaskFlow - About</title>
+    <title>TaskFlow - Home</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link
       rel="stylesheet"
@@ -38,57 +38,45 @@
         </div>
     </nav>
 
-    <!-- About Section -->
+    <!-- Hero Section -->
     <section class="pt-16 pb-20 px-4">
         <div class="max-w-7xl mx-auto flex flex-col md:flex-row items-center">
-            <div class="md:w-1/3 mb-8 md:mb-0">
-                <img
-                  src="https://storage.googleapis.com/workspace-0f70711f-8b4e-4d94-86f1-2a93ccde5887/image/8cd4813a-ece9-4613-9930-08b40c4ad0a4.png"
-                  alt="Professional portrait of a software engineer in a modern office setting, wearing glasses and a subtle smile, with code snippets blurred in the background"
-                  class="rounded-full shadow-lg w-full h-auto"
-                />
+            <div class="md:w-1/2 mb-8 md:mb-0">
+                <h1 class="text-4xl md:text-6xl font-bold text-blue-600 mb-4">Welcome to TaskFlow</h1>
+                <p class="text-lg md:text-xl text-gray-600 mb-6">
+                    A comprehensive task management platform built with modern web technologies. Streamline your productivity with intuitive design and powerful features.
+                </p>
+                <a href="about.html" class="bg-blue-600 text-white px-6 py-3 rounded-lg hover:bg-blue-700 transition duration-300">Learn More</a>
             </div>
-            <div class="md:w-2/3 md:pl-12">
-                <h1 class="text-4xl md:text-5xl font-bold text-blue-600 mb-6">About TaskFlow</h1>
-                <p class="text-lg md:text-xl text-gray-600 mb-6">
-                    TaskFlow is a cutting-edge task management platform designed to revolutionize how individuals and teams handle their workflows. Born from a passion for efficient productivity tools, this project showcases modern web development techniques, from responsive design to scalable architecture.
-                </p>
-                <p class="text-lg md:text-xl text-gray-600 mb-6">
-                    As a full-stack development initiative, TaskFlow integrates the latest technologies to provide an intuitive user experience. The application emphasizes clean UI/UX, real-time collaboration features, and robust backend support to ensure seamless task tracking and team productivity.
-                </p>
-                <h3 class="text-2xl font-semibold text-gray-800 mb-4">Technologies Used:</h3>
-                <ul class="list-disc list-inside text-lg text-gray-600 mb-6 space-y-2">
-                    <li>Frontend: HTML5, CSS3, JavaScript, React (planned)</li>
-                    <li>Backend: Node.js, Express (planned)</li>
-                    <li>Database: MongoDB (planned)</li>
-                    <li>Deployment: GitHub Pages, Netlify</li>
-                    <li>Tools: Git, VS Code, Chrome DevTools</li>
-                </ul>
-                <a href="index.html" class="bg-blue-600 text-white px-6 py-3 rounded-lg hover:bg-blue-700 transition duration-300">Back to Home</a>
+            <div class="md:w-1/2">
+                <img
+                  src="https://storage.googleapis.com/workspace-0f70711f-8b4e-4d94-86f1-2a93ccde5887/image/6591af45-b1e5-4903-9714-315f7d065314.png"
+                  alt="Illustrative dashboard mockup showing task management interface with kanban boards, progress charts, and user-friendly controls in minimalist modern style with blue and white color scheme"
+                  class="rounded-lg shadow-lg w-full h-auto"
+                />
             </div>
         </div>
     </section>
 
-    <!-- Technology Stack Section -->
+    <!-- Features Section -->
     <section class="py-20 bg-white px-4">
         <div class="max-w-7xl mx-auto">
-            <h2 class="text-3xl md:text-4xl font-bold text-center mb-12">Technology Stack</h2>
-            <div class="grid grid-cols-2 md:grid-cols-4 gap-8">
-                <div class="text-center p-4 border border-gray-200 rounded-lg hover:shadow-lg transition duration-300">
-                    <i class="fab fa-html5 fa-3x text-orange-600 mb-2"></i>
-                    <p class="text-md font-semibold">HTML5</p>
+            <h2 class="text-3xl md:text-4xl font-bold text-center mb-12">Key Features</h2>
+            <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
+                <div class="text-center p-6 border border-gray-200 rounded-lg hover:shadow-lg transition duration-300">
+                    <i class="fas fa-tasks fa-3x text-blue-600 mb-4"></i>
+                    <h3 class="text-xl font-semibold mb-2">Task Management</h3>
+                    <p class="text-gray-600">Organize tasks with drag-and-drop functionality and real-time updates.</p>
                 </div>
-                <div class="text-center p-4 border border-gray-200 rounded-lg hover:shadow-lg transition duration-300">
-                    <i class="fab fa-css3-alt fa-3x text-blue-600 mb-2"></i>
-                    <p class="text-md font-semibold">CSS3</p>
+                <div class="text-center p-6 border border-gray-200 rounded-lg hover:shadow-lg transition duration-300">
+                    <i class="fas fa-chart-line fa-3x text-blue-600 mb-4"></i>
+                    <h3 class="text-xl font-semibold mb-2">Analytics</h3>
+                    <p class="text-gray-600">Track productivity with detailed reports and performance metrics.</p>
                 </div>
-                <div class="text-center p-4 border border-gray-200 rounded-lg hover:shadow-lg transition duration-300">
-                    <i class="fab fa-js-square fa-3x text-yellow-500 mb-2"></i>
-                    <p class="text-md font-semibold">JavaScript</p>
-                </div>
-                <div class="text-center p-4 border border-gray-200 rounded-lg hover:shadow-lg transition duration-300">
-                    <i class="fab fa-node-js fa-3x text-green-600 mb-2"></i>
-                    <p class="text-md font-semibold">Node.js</p>
+                <div class="text-center p-6 border border-gray-200 rounded-lg hover:shadow-lg transition duration-300">
+                    <i class="fas fa-users fa-3x text-blue-600 mb-4"></i>
+                    <h3 class="text-xl font-semibold mb-2">Collaboration</h3>
+                    <p class="text-gray-600">Share tasks and projects with team members seamlessly.</p>
                 </div>
             </div>
         </div>
@@ -107,6 +95,6 @@
         menuBtn.addEventListener('click', () => {
             mobileMenu.classList.toggle('hidden');
         });
-  </script src="scripts.js"></script>
+   </script src="scripts.js"></script>
 </body>
 </html>
